dataset/local/tf_rds_aurora_audit_logging/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_rds_cluster
        name: my_cluster
        values:
          cluster_identifier: my-aurora-cluster
          engine: aurora-mysql
          engine_mode: provisioned
          enabled_cloudwatch_logs_exports:
            - audit
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_rds_cluster
        name: my_cluster
        values:
          cluster_identifier: my-aurora-cluster
          engine: aurora-mysql
          engine_mode: provisioned
          enabled_cloudwatch_logs_exports: []
