dataset/local/tf_rds_aurora_audit_logging/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-rds-aurora-mysql-audit-logging-enabled
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-rds-aurora-mysql-audit-logging-enabled
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-rds-aurora-mysql-audit-logging-enabled
    kind: Plan
    resources:
      - bad-plan
    result: fail
